testsuite/tests/contrib/lkt_semantic/mismatching_actuals/test.lkt
# Test errors for mismatched actuals & formals in function calls

fun test(a: Int, b: Int): Int = a + b

val t: Int = test(12, 15) # Correct call
@invalid val u: Int = test(12) # Missing params
@invalid val v: Int = test(b=12) # Missing params in call with kwargs
@invalid val x: Int = test(12, 15, 17) # Too many params
@invalid val y: Int = test(a=1, b=12, c=15) # Too many params kwargs
@invalid val z: Int = test(a=1, b=12, c=foo) # Invalid kwarg with wrong value: check that there is an error message for the expr
